2007.Dec.24 (svn.debian.org/tux4kids - revision 382-392)
    Code:
      * Fix bugs that came with the new login system, including: fix
	re-reading of highscores table, and several Valgrind-detected
	memory leaks in the string processing associate with the login
	system.
      * Add the gettext macro in front of the help strings so they can
	be internationalized (does it work?)
    Documentation:
      * Add documentation on tuxmathadmin in the README.txt file.
	
	Tim Holy <holy@wustl.edu>
	
2007.Dec.07 (svn.debian.org/tux4kids - revision 359)
Version 1.5.9
      David Bruce <dbruce@tampabay.rr.com>

2007.Dec.07 (svn.debian.org/tux4kids - revision 357)
  i18n:
      * Added French po file - contributed by:
       Luc Schrijvers <Begasus@skynet.be>

2007.Dec.05 (svn.debian.org/tux4kids - revision 354)
  Build:
    * Improvement of Makefile.am code for Windows crossbuild to make
      better use of autotools.
    * Addition of tux4kids/tuxmath/people/dbruce/tuxmath_dll directory
      to make it easier for others to set up crossbuild - intention is 
      to have entire cross-compile setup managed by svn.

      David Bruce <dbruce@tampabay.rr.com>

2007.Dec.03 (svn.debian.org/tux4kids - revision 353)
  Options:
    * Added global config file support for specifying a home directory
      (tree) location.
  Game:
    * Allow users to share a single high score file.
	
      Tim Holy <holy@wustl.edu>

2007.Dec.02 (svn.debian.org/tux4kids - revision 350)
  Options:
      * Reworked the user login to make it more robust and
	user-friendly.  This version should be pretty generally usable.
	
      Tim Holy <holy@wustl.edu>

2007.Nov.26 (svn.debian.org/tux4kids - revision 342)
  Options:
      * Added support for user login. This should be helpful in school
	settings where all students log in with the same username.  See
	the README for details.

      Tim Holy <holy@wustl.edu>
	
2007.Nov.18 (svn.debian.org/tux4kids - revision 327)

  Build: